examples/c/error-codes/undefined/UB-TEOFF1-bad-static.output
UB-TEOFF1-bad-static.c:4:13: error: cannot compute offset of bit-field 'm'
            m
            ^
UB-TEOFF1-bad-static.c:3:29: note: bit-field is declared here
      struct s { signed int m : 5; };
                            ^
1 error generated.
